@@ -1,4 +1,5 @@
 DIST aufs-sources-3.10_p20130807.tar.xz 146180 SHA256 c36e0ad9e031bdd91a0b496c37b462168f27f94128e3c589ff310e976d72fa1a SHA512 c2afc0e352696301bbc00adbc2b9d869ace35bb920332758d2215515cd35bbbcde78be77d9908e4a0032c3eed8f86f5bc45c3e3e9b5076796e020e641bc71ec9 WHIRLPOOL a233cff073825b90ee68390f007000c1ea8a37584889c4e794829de4f3aaf640c4bf3cdd0413488d2c895722c902caf6e3662b98e93546de0a587e8492641c88
+DIST aufs-sources-3.10_p20130812.tar.xz 146228 SHA256 6b7e2e6db61a53916a48988608fa5a61cf43e9c92bf0ff830d27ad7c00abe44b SHA512 9cb91ee756e56d19fa8355fa9cb4ddd7c26ad00abdef9f46f2b81b685d9c0d7f3426f26a78c3fca42c084de6aee39e69afeb18db711347e3437029d60820f96b WHIRLPOOL d8cf46d08e654701faafc113cf1e38e239175898c907f55e53f635afc734c0d6200f1888fc28cd21bce0bfdc319760943e6c97a49953480e8824a584795873ae
 DIST aufs-sources-3.9_p20130807.tar.xz 145828 SHA256 04e953da68e8860fdd653b1f34a26f76ebbf211e9696fedcb17836f2583e98f3 SHA512 06f96f07a81ea6bcddeeba17f8ebdb9851fd9bd37588baafa575be174edec99c5dbdfcc7caa29be3c9db417d6b1bd37c2beaca4e31a6105d81c16d2d667a4be1 WHIRLPOOL b1ac78d0fb67b4c6b7ee2ce989f60840d220feb45e439b915c8b8ed1827995a8a97fdf52b5cb696d121d9dc5735b0f35bcd5780dbfe7a8cd69021280f750174f
 DIST deblob-3.10 117299 SHA256 d48cad04fab6a802b3a3e34955c8e35b539c2441f9a62522ec5a132c3a5ae684 SHA512 7b30f0f97ed97bf6b096d4a321b4b1e62f4b48f07972f2511870c3eaaf4f3877b0c6af2f30f6b985edf9c9c79267d40448b504c59016acfe06374630d1fdcba9 WHIRLPOOL 03a5963367cc6cb4f87e3d315ab61a8b3cb1fe577b20d7e2fb6ad83464075b3ed8176f543bb4c3b4e607d78cd55ef940f446bb75be09eb7496321930413ce2b9
 DIST deblob-3.9 116031 SHA256 0fb17070d5aaf226fca39f70df68b7d482e4f803e0ef974626440a28c26b5dc3 SHA512 e014add3728dc3fa0b938f3849ccba60e82354a811eefe6761036aa5e5b7bda39960758bb918506ed3cd0758360729144304227ab2cc3f5489813204f0053d3d WHIRLPOOL 4e65c3a6ba5dd5d850567fcd347167245b527b098ffa390bf0e9fb9778ddb06cd48553f697e2fe7cb793714b520dbb5b90b9948a339663a315e299272aca09ef
@@ -6,6 +7,8 @@ DIST deblob-check-3.10 565672 SHA256 748df2cf5c1f012f9942948827e57b12bb05c569cae
 DIST deblob-check-3.9 557345 SHA256 60d05db20e7b50919ca44487d05e8faa9cca830318bd8d96625f0f75b252eeed SHA512 6b857380d495261c4d356639157f99f3ca3412388fd3b1c72b566c3bb6453c5a22ab7716e3b24e64a9b63dab912b07baccccfd0fca806ac0e0620efeef777b6a WHIRLPOOL 877c2c9b813466f9aa5cfecdc9ab93247bd2cdead457c9e0bd97da49d042d0a52262f9b4f8e9c83e397b57c5bb5a8fe2b61bb5f44d5a178a579cc9fff990941a
 DIST genpatches-3.10-10.base.tar.xz 168240 SHA256 34fb1edc57b03f84ea734d0336cb1bf54ae570bbe693c65a6396f886b313b10e SHA512 d5733a90a9c52f607cc4fee208245611319d60748902b7bbd4419d09343165f5a40346aa0558b1ce0641a0742583706a83e7418bdbb3e3bf608fec97fd519c8f WHIRLPOOL fad2969819768b59456f2ff5ef295f5ce0973d3a7ec1ad07e1c9b44a1d71136fe88317f5d490e95695a47a9a9f8df7eb5bef0d48d9b1fdb05fe9ad6eafe2ae9c
 DIST genpatches-3.10-10.extras.tar.xz 16564 SHA256 e844a521c1e7b92728f373b3ca8cca1a5efee5827eaff03adb0b8bf30dff43d3 SHA512 08b40729aaafa452943dc0f049fcb01fea2720ea49f70791d641dbcfebb732e917073225040cc4777a2e7f0b2d2ee7de19f163575d766c3b448bab65379b698c WHIRLPOOL ece78b18724e043d1eb736d688dce758321c634abf2ee7730afd2707e4b7430591741f449843c6935c576acf1660b2f72a4161697bcb57e137c47c91612f2ec0
+DIST genpatches-3.10-11.base.tar.xz 202548 SHA256 e61abdad0f324a6b59cfb774249b444ae3b15c31c4e7612f6d1cc477568d6825 SHA512 65aec5c92d4baa03b1ea9bba6f80b0ed729192e9c9eea08c43e42d1da0169c48b77ff6a5c8d9ebbb3fbc6e02337303d3d865b6236876d1507fd17215312c93c1 WHIRLPOOL 51f7315b488e6f7e5aa9dc64e83856ee43bd9fb942bbe772682a29402b009ca260ccbfe353f90e023fd9bdd953f2b61073cea6803354a600bca34ed68beef5ea
+DIST genpatches-3.10-11.extras.tar.xz 16564 SHA256 2b6f06a71c89c5866615b1a32324f48e26f7e89b2e7473342a1f3451f1e39500 SHA512 1ef0aad40335438cc10163ffd2e7b7730274fff9bc9ce265be6e194fddf8edf7f527d1cbe3c411d6ba79f4fb63f2ee8d54af37fcdf9eb19f5717b6d54ecfce16 WHIRLPOOL 3bb7054fdfcc887fd306a60deda667acdba0b64e0b5c719f807b50b05c67451fae20e6e22fbde59fbd2fff2ab32b21cb91fa58ae05b7a37e9c8b23c28d5cc66a
 DIST genpatches-3.9-17.base.tar.xz 290752 SHA256 66f3fc418d7faee9809d35df9e4c17da8d84286c8b48e0e5149fa626af2c7a2d SHA512 5a849ad1b2259a5ba45698942ef224231b664cff7bcc6a02b2fe94e317a961ceb1198b6a9c0550bafdc53671fd4db5d323c3f0efb24d3956e8297e32f9369d25 WHIRLPOOL 1cd46b907bc07d130199085c58b5793681577921542b099241aa937cd95dff0f18c91ea8a6eda52e3d1ae2928709678947de4d1f5266aeafe6406a785ec1d75b
 DIST genpatches-3.9-17.extras.tar.xz 16572 SHA256 6a93041aba5cfa6a45a348b654e129b4ba3659c87437217bbd65eb7a0a841827 SHA512 53c94f50f63d866a66869cfa0b2692c8b71ceb17a703424948d5a92c5390942667651e30fb4a662ba02147b70849cd7fb6bf71f0a4940f19ee1b392e684eb7a4 WHIRLPOOL cc2b332caffd5411c55ed9f7ddcde4c3275e6a68ec765f579e682e1e957b48a1c8601f9d607b4b4b3137af40ae0bcc091390ce733b2fdfaf95db00d77ce57370
 DIST lh-logo_linux_clut224.ppm 213668 SHA256 cf2ffc266799f3948131c30fe72870ff03afe9010643cc5a1c7b36cd1fe80562 SHA512 95b2a9b21f9125e178e32447f2310983427b37ffd4a861ce145d57e7daa828a38e51641069cdd191f4f2b303a887ae5b93ab0a40290a7976302683d633cdb315 WHIRLPOOL d0e693f86e964661090774350bdc4621f184bce20c7ad1e2fa62a941894feca5b709029a8f1ae398ca3f190f1eacd8c0e072f82e589cbae3dc2da565acca2297
