@@ -1,5 +1,10 @@
 
 
+*lh-sources-3.10.6 (15 Aug 2013)
+
+  15 Aug 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.10.6.ebuild:
+  Bump to latest aufs3 release and Linux releases
+
   09 Aug 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.9.11.ebuild:
   Readd linux-3.9
 
